fix: adjust main display on tablet

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -40,6 +40,7 @@
     line-height: 1.11;
     max-width: 385px;
     padding: 104px 0 16px;
+    margin-right: 65px;
   }
 }
 
@@ -47,6 +48,7 @@
   .main__title {
     max-width: 285px;
     padding: 86px 0 16px;
+    margin: 0;
   }
 }
 
@@ -60,6 +62,13 @@
 }
 
 @media screen and (max-width: 900px) {
+  .main__description {
+    max-width: 450px;
+    padding-bottom: 48px;
+  }
+}
+
+@media screen and (max-width: 544px) {
   .main__description {
     max-width: 288px;
     padding-bottom: 122px;
