--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -23,7 +23,7 @@
 
 @media screen and (max-width: 900px) {
   .search-form__input {
-    width: 448px;
+    width: 424px;
     height: 56px;
   }
 }
